fixed center of text on ios

--- a/src/components/App/Routes/Home/Landing/styles.scss
+++ b/src/components/App/Routes/Home/Landing/styles.scss
@@ -1,6 +1,10 @@
 @import "src/shared-styles/variables";
 @import "src/shared-styles/styles";
 
+.heroHeader {
+  text-align: center;
+}
+
 .section * {
   transform: translate3d(0,0,0);
 }
@@ -131,7 +135,7 @@
   }
 
   .section .main h1 {
-    font-size: 2.2em;
+    font-size: 2.1em;
   }
 }
 
